--- a/Tienich.html
+++ b/Tienich.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/assets/css/submenu.css">
+    <link rel="stylesheet" href="assets/css/submenu.css">
     <title>Tiện Ích</title>
 </head>
 <body>
     <div class="main">
     
            <div id="header">     
-            <a href="/index.html" class="logo">
-                <img src="/assets/img/logo.png" alt="">
+            <a href="index.html" class="logo">
+                <img src="assets/img/logo.png" alt="">
                 </a>
             
             <div id="menu">
                 <ul id="nav">
                     <li ><a href="">River Thủ Thiêm</a> </li>
-                    <li ><a href="/ViTri.html">Vị Trí</a></li>
-                    <li ><a href="/Tienich.html">Tiện Ích</a></li>
-                    <li ><a href="/Matbang.html">Mặt Bằng</a></li>
+                    <li ><a href="ViTri.html">Vị Trí</a></li>
+                    <li ><a href="Tienich.html">Tiện Ích</a></li>
+                    <li ><a href="Matbang.html">Mặt Bằng</a></li>
                     <li ><a href="">Bảng Giá</a></li>
                     <li ><a href="">TIn Tức</a></li>
                     <li ><a href="">Liên Hệ</a></li>
@@ -38,16 +38,16 @@
 
                <h1 class="name">TIỆN ÍCH CĂN HỘ THE RIVER THỦ THIÊM</h1>
                <span>Được bao quanh bởi sông Sài Gòn và Kênh số 1. Nhờ vậy, tại dự án The River Thủ Thiêm càng trở nên hoàn hảo hơn với địa thế phong thủy hài hòa, từ đó giúp kiến tạo nên không gian sống bình yên, hài hòa và thịnh vượng nhằm mang lại cho quý khách những giá trị tinh tế nhất.</span>
-                <img src="/assets/img/tienich1.jpg" alt="">
+                <img src="assets/img/tienich1.jpg" alt="">
                 <span>Từ River Thủ Thiêm, hằng ngày quý khách hàng có thể nhìn toàn cảnh thành phố. Tận hưởng từng luồng gió mát trong lành từ sông Sài Gòn thơ mộng để mỗi ngày trôi qua đều là sự trải nghiệm cuộc sống tuyệt vời..</span>
-                <img src="/assets/img/tienich2.jpg" alt="">
+                <img src="assets/img/tienich2.jpg" alt="">
                 <span>Với mong muốn thay đổi diện mạo đô thị Việt Nam, REFICO đã không ngừng kiến tạo và phát triển các công trình vượt trội, bằng chứng là hàng loạt công trình đã triển khai thành công và đón nhận được sự hài lòng của khách hàng như: City Garden Ngô Tất Tố, SANTUNARY Hồ Tràm, Watermak,Nexus, Mayfair, Kosmo Tây Hồ,… Bắt đầu từ cảm hứng bất tận trong quá trình kiến tạo nên những công trình vượt trội, xứng tầm tuyệt tác. REFICO luôn mang lại không gian sống hoàn mỹ cùng hệ thống tiện ích dịch vụ đỉnh cao, Và The River Thủ Thiêm là một trong những dự án được chủ đầu tư REFICO tâm huyết nhất trong việc phát triển và xây dựng dự án.
                     RIFICO mong rằng phong cách sống resort sẽ sánh đôi cùng những tiện nghi và thiết bị đẳng cấp quốc tế tại The River Thủ Thiêm. Cư dân sẽ tận hưởng được cuộc sống đầy tiện nghi mang đậm dấu ấn của River Thủ Thiêm trong không gian mở, được bao bọc bởi những khu vườn cảnh quan, hồ bơi rộng lớn,các mảng xanh bao quanh dự án và cùng hàng loạt các tiện ích khác.
 
                 </span>
-                <img src="/assets/img/tienich3.jpg" alt="">
+                <img src="assets/img/tienich3.jpg" alt="">
                 <span>The River Thủ Thiêm có ba hồ bơi và được kết nối trực tiếp đến các tiện ích như nhà hàng, khu tắm nắng, quầy bar bên hồ. Ngoiaf ra, những mảng xanh tại dự án luôn được chủ đầu tư REFICO chú trọng trong việc phát triển dự án căn hộ River Thủ Thiêm, cùng với đó là các khu vui chơi giải trí cho trẻ em, nhà trên cây, sân chơi trong nhà,…</span>
-                <img src="/assets/img/tienich4.jpeg" alt="">
+                <img src="assets/img/tienich4.jpeg" alt="">
                 <br>
                 <br>
                 <!-- <img src="/assets/img/The-River-3.jpg" alt=""> -->
@@ -55,15 +55,15 @@
             <footer class="footer">
                 <div class="contact">
                   <div class="left">
-                    <a href=""><img src="/assets/img/zalo-1.png" alt="" />Zalo </a>
+                    <a href=""><img src="assets/img/zalo-1.png" alt="" />Zalo </a>
                   </div>
                   <div class="center">
                     <a href=""
-                      ><img src="/assets/img/icon-download.png" alt="" />Tải báo cáo</a
+                      ><img src="assets/img/icon-download.png" alt="" />Tải báo cáo</a
                     >
                   </div>
                   <div class="right">
-                    <a href=""><img src="/assets/img/call-1.png" alt="" />Gọi</a>
+                    <a href=""><img src="assets/img/call-1.png" alt="" />Gọi</a>
                   </div>
                 </div>
               </footer>
