--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/index.css">
     <title>PS20506</title>
 </head>
 <body>
@@ -11,7 +11,7 @@
         <section class="banner">
             <div class="nav-wrap">
                 <div class="logo">
-                    <a href="/sub_index.html"><img src="/assets/img/logo.png" alt=""></a>
+                    <a href="sub_index.html"><img src="assets/img/logo.png" alt=""></a>
                 </div>
                 <div class="contact">
                     <div class="hotline">
@@ -47,9 +47,9 @@
     <div class="block1">
         <div class="container">
             <div class="block1-img ">
-                <img src="/assets/img/block1-1.png" alt="" class="first">
-                 <img src="/assets/img/block2.png" alt="" class="mid">
-               <img src="/assets/img/block3.png" alt="" class="last"> 
+                <img src="assets/img/block1-1.png" alt="" class="first">
+                 <img src="assets/img/block2.png" alt="" class="mid">
+               <img src="assets/img/block3.png" alt="" class="last"> 
             </div>
         </div>
     </div>
