--- a/sub_index.html
+++ b/sub_index.html
@@ -2,22 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="/assets/css/submenu.css" />
+    <link rel="stylesheet" href="assets/css/submenu.css" />
     <title>The River</title>
   </head>
   <body>
     <div class="main">
       <div id="header">
-        <a href="/index.html" class="logo">
-          <img src="/assets/img/logo.png" alt="" />
+        <a href="index.html" class="logo">
+          <img src="assets/img/logo.png" alt=""/>
         </a>
 
         <div id="menu">
           <ul id="nav">
             <li><a href="">River Thủ Thiêm</a></li>
-            <li><a href="/ViTri.html">Vị Trí</a></li>
-            <li><a href="/Tienich.html">Tiện Ích</a></li>
-            <li><a href="/Matbang.html">Mặt Bằng</a></li>
+            <li><a href="ViTri.html">Vị Trí</a></li>
+            <li><a href="Tienich.html">Tiện Ích</a></li>
+            <li><a href="Matbang.html">Mặt Bằng</a></li>
             <li><a href="">Bảng Giá</a></li>
             <li><a href="">TIn Tức</a></li>
             <li><a href="">Liên Hệ</a></li>
@@ -39,20 +39,20 @@
           City Tower 88 chưa đến 1km. Đây sẽ là một dự án phức hợp cao cấp được
           dự đoán là đáng sống nhất tại Sài gòn.</span
         >
-        <img src="/assets/img/Dự-án-The-River-2.jpg" alt="" />
+        <img src="assets/img/Dự-án-The-River-2.jpg" alt="" />
         <span
           >Phía Đông khu căn hộ giáp cầu Thủ Thiêm 1, phía Tây có hướng nhìn
           thẳng ra sông Sài Gòn, phía Tây Nam giáp nhà bảo tàng và kênh số 1,
           phía Đông Nam của dự án The River Thủ Thiêm giáp Đại lộ Vòng Cung với
           lộ giới 55 mét.</span
         >
-        <img src="/assets/img/The-River-3.jpg" alt="" />
+        <img src="assets/img/The-River-3.jpg" alt="" />
       </div>
 
       <div id="section">
         <div class="bg_section">
           <div class="img">
-            <img src="/assets/img/bg_section.jpg" alt="" />
+            <img src="assets/img/bg_section.jpg" alt="" />
             <div class="col_1">
               <h2>TỔNG QUAN DỰ ÁN THE RIVER THỦ THIÊM</h2>
               <table>
@@ -115,15 +115,15 @@
     <footer class="footer">
       <div class="contact">
         <div class="left">
-          <a href=""><img src="/assets/img/zalo-1.png" alt="" />Zalo </a>
+          <a href=""><img src="assets/img/zalo-1.png" alt="" />Zalo </a>
         </div>
         <div class="center">
           <a href=""
-            ><img src="/assets/img/icon-download.png" alt="" />Tải báo cáo</a
+            ><img src="assets/img/icon-download.png" alt="" />Tải báo cáo</a
           >
         </div>
         <div class="right">
-          <a href=""><img src="/assets/img/call-1.png" alt="" />Gọi</a>
+          <a href=""><img src="assets/img/call-1.png" alt="" />Gọi</a>
         </div>
       </div>
     </footer>
