--- a/ViTri.html
+++ b/ViTri.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/assets/css/submenu.css">
+    <link rel="stylesheet" href="assets/css/submenu.css">
     <title>Vị Trí</title>
 </head>
 <body>
     <div class="main">
     
            <div id="header">     
-            <a href="/index.html" class="logo">
-                <img src="/assets/img/logo.png" alt="">
+            <a href="index.html" class="logo">
+                <img src="assets/img/logo.png" alt="">
                 </a>
             
             <div id="menu">
                 <ul id="nav">
                     <li ><a href="">River Thủ Thiêm</a> </li>
-                    <li ><a href="/ViTri.html">Vị Trí</a></li>
-                    <li ><a href="/Tienich.html">Tiện Ích</a></li>
-                    <li ><a href="/Matbang.html">Mặt Bằng</a></li>
+                    <li ><a href="ViTri.html">Vị Trí</a></li>
+                    <li ><a href="Tienich.html">Tiện Ích</a></li>
+                    <li ><a href="Matbang.html">Mặt Bằng</a></li>
                     <li ><a href="">Bảng Giá</a></li>
                     <li ><a href="">TIn Tức</a></li>
                     <li ><a href="">Liên Hệ</a></li>
@@ -36,7 +36,7 @@
 
                <h1 class="name">VỊ TRÍ DỰ ÁN CĂN HỘ THE RIVER THỦ THIÊM</h1>
                <span>The River Thủ Thiêm được xây dựng trên lô đất rộng hơn 3,5ha. Trong đó, lô 3.15 rộng 15.376m2, cao từ 10-15 tầng và lô 3.16 rộng 19.881m2. Dự kiến dự án căn hộ The River Thủ Thiêm tung ra thị trường khoảng hơn 1.140 căn hộ. Bao gồm: Luxury Apartment, Biệt thự trên không,(Pool Villas), căn hộ sân vườn và nhà phố thương mại.</span>
-                <img src="/assets/img/LOCATION.jpg" alt="">
+                <img src="assets/img/LOCATION.jpg" alt="">
                 <span>Nằm tại Phân khu chức năng 3 trong tổng thể 8 phân khu chức năng tại khu đô thị mới Thủ Thiêm, dự án The River Thủ Thiêm là dự án hiếm hoi sở hữu vị trí gần như đắt giá nhất tại bán đảo Thủ Thiêm khi là một trong số rất ít dự án nằm tại trục Line 1 và có tầm view trực diện về hướng trung tâm Thành Phố.
 
                     Dự án căn hộ Cao cấp The River Thủ Thiêm toạ lạc tại lô 3.15 và 3.16 góc giao hai mặt tiền đường Nguyễn Cơ Thạch và Đại lộ vòng cung, thuộc phường An Khánh, Khu đô thị Thủ Thiêm, Quận 2, Thành phố Hồ Chính Minh (nay là Thành phố Thủ Đức).
@@ -51,15 +51,15 @@
             <footer class="footer">
                 <div class="contact">
                   <div class="left">
-                    <a href=""><img src="/assets/img/zalo-1.png" alt="" />Zalo </a>
+                    <a href=""><img src="assets/img/zalo-1.png" alt="" />Zalo </a>
                   </div>
                   <div class="center">
                     <a href=""
-                      ><img src="/assets/img/icon-download.png" alt="" />Tải báo cáo</a
+                      ><img src="assets/img/icon-download.png" alt="" />Tải báo cáo</a
                     >
                   </div>
                   <div class="right">
-                    <a href=""><img src="/assets/img/call-1.png" alt="" />Gọi</a>
+                    <a href=""><img src="assets/img/call-1.png" alt="" />Gọi</a>
                   </div>
                 </div>
               </footer>
