--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"> -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="/KSNhat/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/KSNhat/ks.css">
     <script src="https://kit.fontawesome.com/fd609addc2.js"></script>
     <title>The Maze</title>
@@ -54,7 +53,7 @@
         <div class="col-sm-3">
           <div class="footer-left">
             <img class="logo-footer" src="img/logo.gif" alt="" >The Maze
-            <div class="text">Thành lập từ năm 2019, đến nay, Cloud9 Hotel đã có 03 chi nhánh phục vụ hàng ngàn khách đến nghỉ dưỡng. Chúng tôi luôn mong muốn mang lại trải nghiệm tốt nhất cho quý khách khi đến Cloud9 Hotel.</div>
+            <div class="text">Thành lập từ năm 1956, đến nay, The MaZe Hotel đã có 03 chi nhánh phục vụ hàng ngàn khách đến nghỉ dưỡng. Chúng tôi luôn mong muốn mang lại trải nghiệm tốt nhất cho quý khách khi đến The MaZe Hotel.</div>
           </div>
         </div>
         <div class="col-sm-9">
